editing README and try to change header page

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+          <img class="logo" src="assets/go-green..png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Lessons</a>
-          <a href="#">Sign in</a>
-          <a href="#" class="login">Log in</a>
+          <a href="#">Product</a>
+          <a href="#">Service</a>
+          <a href="#">News</a>
+          <a href="#" class="contact">Contact</a>
         </div>
       </div>
     </header>
