--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="stylesheet" type="text/css" href="responsive.css">
   <link rel="shortcut icon" href="favicon.ico" >
+  <link rel="icon" type="image/png" href="img/go-green.png">
   <!--     ┬ ┬┌─┐  ┌─┐┬─┐┌─┐        -->
   <!--     │││├┤   ├─┤├┬┘├┤         -->
   <!--     └┴┘└─┘  ┴ ┴┴└─└─┘        -->
