--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="stylesheet" type="text/css" href="responsive.css">
   <link rel="shortcut icon" href="favicon.ico" >
-  <link rel="icon" type="image/png" href="img/go-green.png">
+  <link rel="icon" type="image/png" href="assets/img/go-green.png">
   <!--     ┬ ┬┌─┐  ┌─┐┬─┐┌─┐        -->
   <!--     │││├┤   ├─┤├┬┘├┤         -->
   <!--     └┴┘└─┘  ┴ ┴┴└─└─┘        -->
@@ -32,9 +32,10 @@
       </div>
     </header>
     <div class="top-wrapper">
+    <blockquote cite="Photo by Alena Koval from Pexels"></blockquote>
       <div class="container">
-        <h1>LEARN TO CODE.</h1>
-        <h1>LEARN TO BE CREATIVE.</h1>
+        <h1>Go Green</h1>
+        <h1>Save the Planet</h1>
         <p>Progate is a web service where you can learn programming online.</p>
         <p>We offer you a fully equipped coding environment to get you started.</p>
         <div class="btn-wrapper">
