--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
   <link rel="stylesheet" type="text/css" href="responsive.css">
   <link rel="shortcut icon" href="favicon.ico" >
   <link rel="icon" type="image/png" href="assets/img/go-green.png">
-  <!--     ┬ ┬┌─┐  ┌─┐┬─┐┌─┐        -->
-  <!--     │││├┤   ├─┤├┬┘├┤         -->
-  <!--     └┴┘└─┘  ┴ ┴┴└─└─┘        -->
-  <!--     ╔═╗╦═╗╔═╗╔═╗╔═╗╔╦╗╔═╗    -->
-  <!--     ╠═╝╠╦╝║ ║║ ╦╠═╣ ║ ║╣     -->
-  <!--     ╩  ╩╚═╚═╝╚═╝╩ ╩ ╩ ╚═╝    -->
 </head>
 <body>
     <header>
@@ -38,6 +32,7 @@
         <h1>Save the Planet</h1>
         <p>Progate is a web service where you can learn programming online.</p>
         <p>We offer you a fully equipped coding environment to get you started.</p>
+        <img class="animation" src="assets/source.GIF">
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Sign up with Email</a>
           <p>or</p>
