--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Save the Planet</h1>
         <p>Progate is a web service where you can learn programming online.</p>
         <p>We offer you a fully equipped coding environment to get you started.</p>
-        <img class="animation" src="assets/source.GIF">
+        <img class="animation" src="assets/source.gif">
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Sign up with Email</a>
           <p>or</p>
