container h1 - Judul website

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div class="top-wrapper">
     <blockquote cite="Photo by Alena Koval from Pexels"></blockquote>
       <div class="container">
-        <h1>Go Green</h1>
-        <h1>Save the Planet</h1>
-        <p>Progate is a web service where you can learn programming online.</p>
-        <p>We offer you a fully equipped coding environment to get you started.</p>
+        <h1>Hayuk Go Green!</h1>
+        <h1>Selamatkan Bumi Kita!</h1>
+        <p>Ayo selamatkan bumi kita dengan membeli produk yang ramah lingkungan!</p>
+        <p>Produk yang ramah lingkungan dapat mengurangi sampah yang merusak lingkungan! Ayo pindah sekarang juga!</p>
         <img class="animation" src="assets/source.gif">
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Sign up with Email</a>
