--- a/index.html
+++ b/index.html
@@ -44,34 +44,38 @@
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Learn Where to Get Started!</h2>
+          <h2>Our products</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
-              <p>HTML & CSS</p>
+              <img src="assets/img/1.png">
+              <blockquote cite="https://www.freepik.com/free-photos-vectors/logo'/Logo vector created by rawpixel.com - www.freepik.com"></blockquote>
+              <!-- <p>HTML & CSS</p> -->
             </div>
             <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
+              <img src="assets/img/2.png">
+              <blockquote cite="https://www.freepik.com/free-photos-vectors/logo'/Logo vector created by rawpixel.com - www.freepik.com"></blockquote>
+              <!-- <p>jQuery</p> -->
             </div>
             <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
+              <img src="assets/img/3.png">
+              <blockquote cite="https://www.freepik.com/free-photos-vectors/logo'/Logo vector created by rawpixel.com - www.freepik.com"></blockquote>
+              <!-- <p>Ruby</p> -->
             </div>
             <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
+              <img src="assets/img/4.png">
+              <blockquote cite="https://www.freepik.com/free-photos-vectors/logo'/Logo vector created by rawpixel.com - www.freepik.com"></blockquote>
+              <!-- <p>PHP</p> -->
             </div>
             <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
           </div>
