scroll menu product

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Product</a>
+          <a href="#product">Product</a>
           <a href="#">Service</a>
           <a href="#">News</a>
           <a href="#" class="contact">Contact</a>
@@ -41,10 +41,10 @@
         </div>
       </div>
     </div>
-    <div class="lesson-wrapper">
+    <div class="lesson-wrapper" id="product">
       <div class="container">
         <div class="heading">
-          <h2>Our products</h2>
+          <h2 >Our products</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
