--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <footer>
       <div class="container">
         <div class="footer-list">
-          <a href="#" class="btn Product">Product</a>
+          <a href="#product" class="btn Product">Product</a>
           <a href="#" class="btn Service">Service</a>
           <a href="#"class="btn News">News</a>
           <a href="#" class="btn Contact">Contact</a>
