scroll menu news

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="header-right">
           <a href="#product">Product</a>
           <a href="#">Service</a>
-          <a href="#">News</a>
+          <a href="#news">News</a>
           <a href="#" class="contact">Contact</a>
         </div>
       </div>
@@ -83,7 +83,7 @@
         </div>
       </div>
     </div>
-    <div class="message-wrapper">
+    <div class="message-wrapper" id="news">
       <div class="container">
         <div class="heading">
           <h2>Ready to become an awesome programmer?</h2>
@@ -97,7 +97,7 @@
         <div class="footer-list">
           <a href="#product" class="btn Product">Product</a>
           <a href="#" class="btn Service">Service</a>
-          <a href="#"class="btn News">News</a>
+          <a href="#news"class="btn News">News</a>
           <a href="#" class="btn Contact">Contact</a>
         </div>
       </div>
