class menu active

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <link rel="shortcut icon" href="favicon.ico" >
   <link rel="icon" type="image/png" href="assets/img/go-green.png">
 </head>
-<body>
+<body class="home">
     <header>
       <div class="container">
         <div class="header-left">
           <img class="logo" src="assets/go-green..png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
-        <div class="header-right">
-          <a href="#product">Product</a>
-          <a href="#">Service</a>
-          <a href="#news">News</a>
-          <a href="#" class="contact">Contact</a>
+        <div class="header-right" id="menu-right">
+          <a href="#product" class="menu">Product</a>
+          <a href="#" class="menu active">Service</a>
+          <a href="#news" class="menu">News</a>
+          <a href="#" class="menu">Contact</a>
         </div>
       </div>
     </header>
@@ -48,8 +48,8 @@
         </div>
         <div class="lessons">
           <div class="lesson">
-            <div class="lesson-icon">
-              <img src="assets/img/1.png">
+            <div class="lesson-icon" id="lesson-icon">
+              <img src="assets/img/1.png" class="satu">
               <blockquote cite="https://www.freepik.com/free-photos-vectors/logo'/Logo vector created by rawpixel.com - www.freepik.com"></blockquote>
               <!-- <p>HTML & CSS</p> -->
             </div>
@@ -57,7 +57,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="assets/img/2.png">
+              <img src="assets/img/2.png" class="dua">
               <blockquote cite="https://www.freepik.com/free-photos-vectors/logo'/Logo vector created by rawpixel.com - www.freepik.com"></blockquote>
               <!-- <p>jQuery</p> -->
             </div>
@@ -65,7 +65,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="assets/img/3.png">
+              <img src="assets/img/3.png" class="tiga">
               <blockquote cite="https://www.freepik.com/free-photos-vectors/logo'/Logo vector created by rawpixel.com - www.freepik.com"></blockquote>
               <!-- <p>Ruby</p> -->
             </div>
@@ -73,7 +73,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="assets/img/4.png">
+              <img src="assets/img/4.png" class="empat">
               <blockquote cite="https://www.freepik.com/free-photos-vectors/logo'/Logo vector created by rawpixel.com - www.freepik.com"></blockquote>
               <!-- <p>PHP</p> -->
             </div>
@@ -107,5 +107,7 @@
           <p>Correy Ananta | Eka Puji | Dhiki Handika | Dini Mutias | Dody Tri</p>
         </div>
      </footer>
+
+     <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
 </html>
