class menu active fix

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right" id="menu-right">
-          <a href="#product" class="menu">Product</a>
-          <a href="#" class="menu active">Service</a>
+          <a href="#product" class="menu active">Product</a>
+          <a href="#" class="menu">Service</a>
           <a href="#news" class="menu">News</a>
           <a href="#" class="menu">Contact</a>
         </div>
