--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right" id="menu-right">
           <a href="#product" class="menu active">Product</a>
-          <a href="#" class="menu">Service</a>
+          <a href="#service" class="menu">Service</a>
           <a href="#news" class="menu">News</a>
           <a href="#" class="menu">Contact</a>
         </div>
@@ -34,10 +34,10 @@
         <p>Produk yang ramah lingkungan dapat mengurangi sampah yang merusak lingkungan! Ayo pindah sekarang juga!</p>
         <img class="animation" src="assets/source.gif">
         <div class="btn-wrapper">
-          <a href="#" class="btn signup">Sign up with Email</a>
+          <a href="#" class="btn signup">Contact us with Email</a>
           <p>or</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Sign up with Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Sign up with Twitter</a>
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Contact us with Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Contact us with Twitter</a>
         </div>
       </div>
     </div>
@@ -86,6 +86,19 @@
     <div class="message-wrapper" id="news">
       <div class="container">
         <div class="heading">
+          <h2>News</h2>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+        </div>
+      </div>
+    </div>
+    <div class="message-wrapper" id="service">
+      <div class="container">
+        <div class="heading">
           <h2>Ready to join us?</h2>
           <h3>Be healty, happy, and wealthy!</h3>
         </div>
@@ -96,7 +109,7 @@
       <div class="container">
         <div class="footer-list">
           <a href="#product" class="btn Product">Product</a>
-          <a href="#" class="btn Service">Service</a>
+          <a href="#service" class="btn Service">Service</a>
           <a href="#news"class="btn News">News</a>
           <a href="#" class="btn Contact">Contact</a>
         </div>
