--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@
       <div class="container">
         <div class="heading">
           <h2>News</h2>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+          <h3>Terkini</h3>
+          <blockquote cite="https://koinworks.com/blog/kegiatan-go-green/"></blockquote>
+          <p>Lakukan Kegiatan Go Green Ini Untuk Kehidupan Anda yang Lebih Baik! – Aktivitas ramah lingkungan bukan hanya sekadar tren masa kini. Go green juga dianggap sebagai solusi yang tepat untuk mengatasi kondisi bumi yang sudah mulai kritis ini. 
+
+          Siapa saja bisa menciptakan #PengaruhBaik bagi lingkungan, terlepas dari title atau status yang melekat di masyarakat. Selama orang tersebut masih tinggal di bumi ini, maka tanggung jawabnya tetaplah sama, yaitu menjaga bumi.
+
+          Yuk, lakukan kegiatan go green berikut ini untuk memberi #PengaruhBaik bagi kehidupan Anda dan orang-orang di sekitar Anda!</p>
+          <p>https://koinworks.com/blog/kegiatan-go-green/</p>
         </div>
       </div>
     </div>
