--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div class="header-left">
           <img class="logo" src="assets/go-green..png">
         </div>
+        <a href="#" class="menu-icon">
+          <span class="fa fa-bars"></span>
+        </a>
         <div class="header-right" id="menu-right">
           <a href="#product" class="menu active">Product</a>
           <a href="#service" class="menu">Service</a>
