--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <div class="header-left">
           <img class="logo" src="assets/go-green..png">
         </div>
-        <a href="#" class="menu-icon">
-          <span class="fa fa-bars"></span>
-        </a>
+        <span class="fa fa-bars menu icon"></span>
+
         <div class="header-right" id="menu-right">
           <a href="#product" class="menu active">Product</a>
           <a href="#service" class="menu">Service</a>
