edit header (fa fa-bars menu icon) and message-wrapper

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         <div class="header-left">
           <img class="logo" src="assets/go-green..png">
         </div>
-        <span class="fa fa-bars menu icon"></span>
-
+        <!-- <span class=""></span> -->
         <div class="header-right" id="menu-right">
           <a href="#product" class="menu active">Product</a>
-          <a href="#service" class="menu">Service</a>
+          <!-- <a href="#service" class="menu">Service</a> -->
           <a href="#news" class="menu">News</a>
           <a href="#" class="menu">Contact</a>
         </div>
@@ -33,13 +32,7 @@
         <h1>Selamatkan Bumi Kita!</h1>
         <p>Ayo selamatkan bumi kita dengan membeli produk yang ramah lingkungan!</p>
         <p>Produk yang ramah lingkungan dapat mengurangi sampah yang merusak lingkungan! Ayo pindah sekarang juga!</p>
-        <img class="animation" src="assets/source.gif">
-        <div class="btn-wrapper">
-          <a href="#" class="btn signup">Contact us with Email</a>
-          <p>or</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Contact us with Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Contact us with Twitter</a>
-        </div>
+        <img class="animation" src="assets/source.gif"> -->
       </div>
     </div>
     <div class="lesson-wrapper" id="product">
@@ -102,17 +95,23 @@
     <div class="message-wrapper" id="service">
       <div class="container">
         <div class="heading">
-          <h2>Ready to join us?</h2>
-          <h3>Be healty, happy, and wealthy!</h3>
+        <h2>Ready to join us?</h2>
+        <h2>Follow me gogreeners</h2>
+        <div class="btn-wrapper">
+          <a href="#" class="btn signup">Contact us with Email</a>
+          <p>or</p>
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Contact us with Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Contact us with Twitter</a>
+        </div>   
+        <h3>Be healty, happy, and wealthy!</h3>
         </div>
-        <span class="btn message">Start Today</span>
       </div>
     </div>
     <footer>
       <div class="container">
         <div class="footer-list">
           <a href="#product" class="btn Product">Product</a>
-          <a href="#service" class="btn Service">Service</a>
+          <!-- <a href="#service" class="btn Service">Service</a> -->
           <a href="#news"class="btn News">News</a>
           <a href="#" class="btn Contact">Contact</a>
         </div>
