--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Selamatkan Bumi Kita!</h1>
         <p>Ayo selamatkan bumi kita dengan membeli produk yang ramah lingkungan!</p>
         <p>Produk yang ramah lingkungan dapat mengurangi sampah yang merusak lingkungan! Ayo pindah sekarang juga!</p>
-        <img class="animation" src="assets/source.gif"> -->
+        <img class="animation" src="assets/source.gif">
       </div>
     </div>
     <div class="lesson-wrapper" id="product">
