--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="header-left">
           <img class="logo" src="assets/go-green..png">
         </div>
+        <span class="fa fa-bars menu-icon"></span>
         <!-- <span class=""></span> -->
         <div class="header-right" id="menu-right">
           <a href="#product" class="menu active">Product</a>
