--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="header-left">
           <img class="logo" src="assets/go-green..png">
         </div>
-        <!-- <span class=""></span> -->
-        <div class="header-right" id="menu-right">
+        <span class="fa fa-bars menu-icon"></span>
+        <div class="header-right">
           <a href="#product" class="menu active">Product</a>
           <!-- <a href="#service" class="menu">Service</a> -->
           <a href="#news" class="menu">News</a>
@@ -25,6 +25,7 @@
         </div>
       </div>
     </header>
+
     <div class="top-wrapper">
     <blockquote cite="Photo by Alena Koval from Pexels"></blockquote>
       <div class="container">
@@ -32,7 +33,7 @@
         <h1>Selamatkan Bumi Kita!</h1>
         <p>Ayo selamatkan bumi kita dengan membeli produk yang ramah lingkungan!</p>
         <p>Produk yang ramah lingkungan dapat mengurangi sampah yang merusak lingkungan! Ayo pindah sekarang juga!</p>
-        <img class="animation" src="assets/source.gif"> -->
+          <img class="animation" src="assets/source.gif">
       </div>
     </div>
     <div class="lesson-wrapper" id="product">
@@ -92,11 +93,10 @@
         </div>
       </div>
     </div>
-    <div class="message-wrapper" id="service">
+    <div class="message-wrapper" id="contact">
       <div class="container">
         <div class="heading">
         <h2>Ready to join us?</h2>
-        <h2>Follow me gogreeners</h2>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Contact us with Email</a>
           <p>or</p>
@@ -115,8 +115,6 @@
           <a href="#news"class="btn News">News</a>
           <a href="#" class="btn Contact">Contact</a>
         </div>
-      </div>
-        <div class="container">
           <img src="assets/go-green..png">
           <p>Copyright: PRO-2C/C3</p>
           <p>Correy Ananta | Dhiki Handika | Dini Mutias | Dody Tri | Eka Puji</p>
